# ai-dev-tools-zoomcamp-2025-projects-attempt-1

./: AGENTS.md  Dockerfile  README.md  deploy.sh  main.py  pyproject.toml
backend/: .env.sample  app.py  openapi.yaml  pyproject.toml
backend/tests/: conftest.py  test_api.py
frontend/: .env.sample  app.py  pyproject.toml
frontend/templates/: index.html  invite.html  signup.html
frontend/tests/: conftest.py  test_ui.py
