[project]
name = "poshbullet-frontend"
version = "0.1.0"
description = "Frontend application for PoshBullet"
requires-python = ">=3.10"
dependencies = [
    "flask",
    "authlib",
    "requests",
    "python-dotenv",
    "uvicorn>=0.40.0",
    "pytest>=9.0.2",
    "pytest-cov>=7.0.0",
    "requests-mock>=1.12.1",
]
